syntax = "proto3";
package story.dkg.v1.types;

option go_package = "github.com/piplabs/story/client/x/dkg/types";

message EventBeginInitialization {
  bytes mrenclave = 1;
  uint32 round = 2;
  uint32 total = 3;
  uint32 start_block = 4;
  repeated string active_validators = 5;
}

message EventBeginChallengePeriod {
  bytes mrenclave = 1;
  uint32 round = 2;
}

message EventBeginNetworkSet {
  bytes mrenclave = 1;
  uint32 round = 2;
  uint32 total = 3;
  uint32 threshold = 4;
}

message EventBeginFinalization {
  bytes mrenclave = 1;
  uint32 round = 2;
}

message EventDKGFinalized {
  bytes mrenclave = 1;
  uint32 round = 2;
}